fixed company logo z-index / adjusted skill card shadow

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,7 +154,7 @@
 }
 
 .project-client-icon {
-    z-index: 4;
+    z-index: 2;
     right: 30px;
     bottom: 30px;
     height: 70px;
