--- a/styles/skills.css
+++ b/styles/skills.css
@@ -11,10 +11,11 @@
     height: 210px;
     /* width: 250px; */
     border-radius: 10px;
-    -webkit-box-shadow: 5px 3px 15px -3px rgba(37,11,54,1);
--moz-box-shadow: 5px 3px 15px -3px rgba(37,11,54,1);
-box-shadow: 5px 3px 15px -3px rgba(37,11,54,1);
     transition: 0.2s ease-in-out all;
+
+    -webkit-box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
+-moz-box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
+box-shadow: 2px 2px 10px -3px rgba(37,11,54,1);
 }
 
 .skill-card:hover {
@@ -67,6 +68,10 @@ box-shadow: 5px 3px 15px -3px rgba(37,11,54,1);
         display: flex;
         height: 60px;
     }
+    
+.skill-card:hover {
+    transform: translateX(15px);
+}
 
     .skill-card > .skill-icon {
         height: 70px;
